# openclaw_bot

./: .dockerignore  .gitignore  AGENTS.md  BRAIN.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  Gemini.md  HEARTBEAT.md  LearnLM.md  MEMORY.md  PROJECT_CONTEXT.md  README.md  ROADMAP_OPENCLAW2026.md  SECURITY.md  SOUL.md  TROUBLESHOOTING.md  _full_stress_test.py  _imp_result.txt  _test_imports.py  _validate.py  archivist_template.md  benchmark_output.txt  check_json.py  docker-compose.yml  dump_tools.py  main.py  memory_gc.py  ollama_list.txt  openapi.json  openclaw.json  openclaw_agents.json  openclaw_config.json  oxlint_output.txt  oxlint_results.txt  package.json  pnpm-lock.yaml  pull_and_test.py  pyproject.toml  (+11 more)
.memory-bank/: Cold_Memory.md  Domain_Experts.md  Hot_Memory.md  ROADMAP_ARKADIY.md
.obsidian/: Learning_Log.md
config/: brigade_policy.json  openclaw.json  openclaw_agents.json  openclaw_config.json
data/: context_bridge.db  full_stress_test_v17_3.json  runtime_error_log.json
docs/: agents.md  docs.json  index.md  llms-full.txt  llms.txt
grafana/: prometheus.yml
rust_core/: Cargo.toml  clippy_output.txt
rust_core/src/: jsonrpc_parser.rs  lib.rs  sandbox.rs
scripts/: append_training_data.py  append_training_data2.py  append_training_data3.py  bench1.py  bench2.py  benchmark_deep_research.py  benchmark_tokens.py  benchmark_vllm.py  blackwell_wsl.sh  chaos_test.py  check_coder_access.py  check_hf_models.py  check_lengths.py  compile_contracts.ps1  doc_ingester.py  download_models.sh  eval_lora.py  export_metrics.py  index_memory.py  (+28 more)
(+345 files in other folders)
