[package]
name = "openclaw_rust_core"
version = "0.2.0"
edition = "2021"
description = "High-performance Rust core: sandbox, JSON-RPC parser, inference optimiser"

[lib]
name = "openclaw_rust_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
